--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ body {
   width: 100vw;
   height: 100vh;
   z-index: 1;
+  background: url("assets/soil.jpg");
+  background-size: 200px 200px;
 }
 #three-js-container .buttons {
   z-index: 2;
