--- a/style.scss
+++ b/style.scss
@@ -32,6 +32,8 @@ body{
         width: 100vw;
         height: 100vh;
         z-index: 1;
+        background: url('assets/soil.jpg');
+        background-size: 200px 200px;
     }
 
     .buttons{
